# htr2hpc

./: .envrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  DEPLOY_NOTES.md  DEVELOPERNOTES.md  README.md  codecov.yml  conftest.py  devbox.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: sphinx_docs.yml  tests.yml  unit-tests.yml
scripts/: user_setup.sh
sphinx-docs/: Makefile  codedocs.rst  conf.py  django_settings.py  index.rst
src/htr2hpc/: api_client.py  apps.py  context_processors.py  pytest_plugin.py  settings.py  tasks.py  test_settings.py  train.py  train_apps.py  urls.py  users.py  views.py
src/htr2hpc/management/commands/: cleanup_exports.py
src/htr2hpc/migrations/: 0001_user_email_allow_null.py
src/htr2hpc/templates/: additional_footer.html  additional_heading.html  additional_icons.html  base.html
src/htr2hpc/templates/admin/users/user/: cas_user_init.html  change_list.html  change_list_object_tools.html
src/htr2hpc/templates/core/models_list/: main.html
src/htr2hpc/templates/registration/: login.html
src/htr2hpc/templates/users/: contactus.html  profile.html
src/htr2hpc/train/: README.md  apps.py  calculate.py  config.py  data.py  rm_models.py  run.py  slurm.py  user_setup.sh
tests/: conftest.py  test_api_client.py  test_calculate.py  test_cleanup_exports.py  test_context_processors.py  test_settings.py  test_train_data.py  test_users.py
