[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "htr2hpc"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2"}
keywords = []
authors = [
  { name = "rlskoeser", email = "rebecca.s.koeser@princeton.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pucas>=0.9",    # TODO: move to an optional group for webapp integration only?
  "psutil",
  "requests",
  "kraken",
  "humanize",
  "simple_slurm",
  "tqdm",
  "intspan",
  "fabric",
  "django~=4.2",   # must match eScriptorium's Django version
]

[project.urls]
Documentation = "https://htr2hpc.readthedocs.io/"
Issues = "https://github.com/Princeton-CDH/htr2hpc/issues"
Source = "https://github.com/Princeton-CDH/htr2hpc"

[dependency-groups]
docs = [
  "sphinx>=7.2",
  "alabaster",
  "django~=4.2",
  "myst-parser",
]
dev = [
  "pre-commit",
  "pytest>=8.3",
  "pytest-django>=4.9",
  "pytest-cov>=6.1",
  "pytest-mock>=3.14",
  "coverage[toml]>=7.6",
  "responses>=0.25",
  {include-group = "docs"},
]

[project.scripts]
htr2hpc-train = "htr2hpc.train.run:main"

[tool.hatch.version]
path = "src/htr2hpc/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/htr2hpc tests}"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test_settings"
pythonpath = ["src", "tests"]
testpaths = ["tests"]
addopts = "-p no:parasolr"

[tool.coverage.run]
source_pkgs = ["htr2hpc", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
htr2hpc = ["src/htr2hpc"]
tests = ["tests", "*/htr2hpc/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.lint]
extend-select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "I",    # isort
  "PERF", # perflint
  "PTH",  # flake8-use-pathlib
  "RUF",  # ruff-specific rules
  "SIM",  # flake8-simplify
  "UP",   # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
# Django migration classes use mutable class attributes (dependencies, operations)
# as a framework convention; RUF012 does not apply here.
"*/migrations/*.py" = ["RUF012"]

[tool.codespell]
skip = "*.egg-info"

[tool.mdformat]
number = true
wrap = "keep"
end_of_line = "lf"
